--- a/Changelog.txt
+++ b/Changelog.txt
@@ -17,6 +17,8 @@ Version 1.3.13-dev
  + Added bats, giants, witches, withers, and wither skeletons to the mcMMO combat experience list, and makes their experience drops configurable
  + Added the ability to track mobs spawned by mob spawners or the Taming ability when the chunks they are in unload and reload
  + Added wooden button to the list of items that shouldn't trigger abilities
+ + Added a new feature to fishing. Players will have +10% chance of finding enchanted items when fishing while it's raining
+ + Added displaying bonus perks on skill commands
  = Fixed issue with missing default cases from several switch/case statements
  = Fixed issue with Mining using actual skill level rather than max skill level
  = Fixed some issues with static access
@@ -40,6 +42,7 @@ Version 1.3.13-dev
  ! GJ stopped being a lazy slacker and got stuff done
  ! Changed code that uses SpoutPlugin to make it compatible with the latest version
  ! Changed Reimplemented skill level and power level caps.
+ ! Moved Arcane Forging and Fishing setting from config.yml to advanced.yml
  - Removed dead code relating to null profiles
  - Removed unused imports
 
