Adding missing line to locale files
Forgot to add this in my previous commit

--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -87,6 +87,7 @@ Fishing.Effect.5=Vyklepni p\u0159edm\u011bty z p\u0159\u00ed\u0161er s prutem
 Fishing.Effect.6=Fisherman\'s Diet
 Fishing.Effect.7=Improves hunger restored from fished foods
 Fishing.Enchant.Chance=[[RED]]\u0160ance na magick\u00e9ho lovce: [[YELLOW]]{0}
+Fishing.Chance.Raining=[[BLUE]] Rain Bonus
 Fishing.ItemFound=[[GRAY]]Nasel si poklad!
 Fishing.Listener=Rybareni:
 Fishing.MagicFound=[[GRAY]]C\u00edt\u00edte dotek magie s t\u00edmto \u00falovkem...
