--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -104,6 +104,7 @@ Fishing.Effect.5=Reisse per Angel Gegenst\u00E4nde aus den Mobs
 Fishing.Effect.6=Fischer-Mahlzeit
 Fishing.Effect.7=Verbessert Effizienz von geangelter Nahrung
 Fishing.Enchant.Chance=[[RED]]Zauber-J\u00E4ger Chance: [[YELLOW]]{0}
+Fishing.Chance.Raining=[[BLUE]] Rain Bonus
 Fishing.ItemFound=[[AQUA]]Du hast einen Schatz gefunden!
 Fishing.Listener=Angeln: 
 Fishing.MagicFound=[[AQUA]]Dich ber\u00FChrt ein leichter Zauber bei diesem Fang...
