--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -87,6 +87,7 @@ Fishing.Effect.5=Sacudir los items fuera de los monstruos con la ca\u00f1a de pe
 Fishing.Effect.6=Fisherman\'s Diet
 Fishing.Effect.7=Improves hunger restored from fished foods
 Fishing.Enchant.Chance=[[RED]]Probabilidad de Cazador M\u00e1gico: [[YELLOW]]{0}
+Fishing.Chance.Raining=[[BLUE]] Rain Bonus
 Fishing.ItemFound=[[GRAY]]\u00a1Tesoro encontrado!
 Fishing.Listener=Pescador: 
 Fishing.MagicFound=[[GRAY]]Sientes un toque de magia con esta pesca...
