--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -87,6 +87,7 @@ Fishing.Effect.5=Scrolla oggetti di dosso ai mob con una canna da pesca
 Fishing.Effect.6=Dieta del Pescatore
 Fishing.Effect.7=Aumenta la fame recuperata tramite cibi pescati
 Fishing.Enchant.Chance=[[RED]]Possibilit\u00e0 di Cacciatore di Magia: [[YELLOW]]{0}
+Fishing.Chance.Raining=[[BLUE]] Rain Bonus
 Fishing.ItemFound=[[GRAY]]Hai trovato un tesoro!
 Fishing.Listener=Pesca:
 Fishing.MagicFound=[[GRAY]]Senti un tocco di magia in questa cattura...
