--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -87,6 +87,7 @@ Fishing.Effect.5=Fait tomber des objets des monstres avec une canne \u00e0 p\u00
 Fishing.Effect.6=Fisherman\'s Diet
 Fishing.Effect.7=Improves hunger restored from fished foods
 Fishing.Enchant.Chance=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}
+Fishing.Chance.Raining=[[BLUE]] Rain Bonus
 Fishing.ItemFound=[[GRAY]]Tr\u00e9sor d\u00e9couvert !
 Fishing.Listener=P\u00eache :
 Fishing.MagicFound=[[GRAY]]Vous ressentez quelque chose de magique dans cette prise...
