Fixed removing to many '%' from locale files

--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -195,8 +195,8 @@ Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0} durability rest
 Repair.Skills.StackedItems=[[DARK_RED]]Nem\u016f\u017ee\u0161 opravovat nestackovan\u00e9 p\u0159edm\u011bty.
 Repair.Skills.Super.Chance=[[RED]]Super Repair Chance: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]Dovednost v opravovani byla navysena o {0}. Celkem ({1})
-Repair.Arcane.Chance.Downgrade=[[GRAY]]Sance na degradovani magicke sily predmetu: [[YELLOW]]{0}
-Repair.Arcane.Chance.Success=[[GRAY]]Mira uspesnosti AF: [[YELLOW]]{0}
+Repair.Arcane.Chance.Downgrade=[[GRAY]]Sance na degradovani magicke sily predmetu: [[YELLOW]]{0}%
+Repair.Arcane.Chance.Success=[[GRAY]]Mira uspesnosti AF: [[YELLOW]]{0}%
 Repair.Arcane.Downgrade=[[RED]]Magick\u00e1 s\u00edla tohoto p\u0159edm\u011btu zesl\u00e1bla.
 Repair.Arcane.Fail=[[RED]]Predmet ztratil navzdy svou magickou silu.
 Repair.Arcane.Lost=[[RED]]Nemel jsi dostatocnou dovednost pro zachovani ocarovani predmetu.
