--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -222,8 +222,8 @@ Repair.Skills.Super.Chance=[[RED]]Super-Reparatur Chance: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]Reparatur Skill um {0} gestiegen. Gesamt ({1})
 
 ##ARKANES SCHMIEDEN
-Repair.Arcane.Chance.Downgrade=[[GRAY]]AS Verminderungs Chance: [[YELLOW]]{0}
-Repair.Arcane.Chance.Success=[[GRAY]]AS Erfolgs-Rate: [[YELLOW]]{0}
+Repair.Arcane.Chance.Downgrade=[[GRAY]]AS Verminderungs Chance: [[YELLOW]]{0}%
+Repair.Arcane.Chance.Success=[[GRAY]]AS Erfolgs-Rate: [[YELLOW]]{0}%
 Repair.Arcane.Downgrade=[[RED]]Zauber-Wert des Gegenstands vermindert.
 Repair.Arcane.Fail=[[RED]]Der Gegenstands wurde entzaubert.
 Repair.Arcane.Lost=[[RED]]Du hast nicht gen\u00FCgend Skill um Verzauberungen zu erhalten.
