--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -195,8 +195,8 @@ Repair.Skills.Mastery=[[RED]]Maestr\u00eda de la Reparaci\u00f3n: [[YELLOW]]{0} 
 Repair.Skills.StackedItems=[[DARK_RED]]No puedes reparar items apilados.
 Repair.Skills.Super.Chance=[[RED]]Probabilidad de S\u00faper Reparaci\u00f3n: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]Habilidad de Reparaci\u00f3n incrementada en {0}. Total ({1})
-Repair.Arcane.Chance.Downgrade=[[GRAY]]Probabilidad de Degradaci\u00f3n en FA: [[YELLOW]]{0}
-Repair.Arcane.Chance.Success=[[GRAY]]Tasa de \u00c9xito de FA: [[YELLOW]]{0}
+Repair.Arcane.Chance.Downgrade=[[GRAY]]Probabilidad de Degradaci\u00f3n en FA: [[YELLOW]]{0}%
+Repair.Arcane.Chance.Success=[[GRAY]]Tasa de \u00c9xito de FA: [[YELLOW]]{0}%
 Repair.Arcane.Downgrade=[[RED]]El poder Arcano de este objeto ha disminu\u00eddo.
 Repair.Arcane.Fail=[[RED]]El objeto ha perdido permanentemente sus poderes Arcanos
 Repair.Arcane.Lost=[[RED]]No tienes habilidad suficiente para mantener ning\u00fan tipo de encantamientos.
