--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -195,8 +195,8 @@ Repair.Skills.Mastery=[[RED]]Ma\u00eetrise du forgeage : [[YELLOW]]Durabilit\u00
 Repair.Skills.StackedItems=[[DARK_RED]]Vous ne pouvez pas r\u00e9parer les objets empil\u00e9s.
 Repair.Skills.Super.Chance=[[RED]]Probabilit\u00e9 de superbe r\u00e9paration : [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]Le talent R\u00e9paration augmente de {0}. Total ({1})
-Repair.Arcane.Chance.Downgrade=[[GRAY]]Forge arcanique, chance de d\u00e9gradation : [[YELLOW]]{0}
-Repair.Arcane.Chance.Success=[[GRAY]]Forge arcanique, taux de succ\u00e8s : [[YELLOW]]{0}
+Repair.Arcane.Chance.Downgrade=[[GRAY]]Forge arcanique, chance de d\u00e9gradation : [[YELLOW]]{0}%
+Repair.Arcane.Chance.Success=[[GRAY]]Forge arcanique, taux de succ\u00e8s : [[YELLOW]]{0}%
 Repair.Arcane.Downgrade=[[RED]]Les \u00e9nergies arcaniques ont \u00e9t\u00e9 affaiblies sur cet objet.
 Repair.Arcane.Fail=[[RED]]Les \u00e9nergies arcaniques ont quitt\u00e9 cet objet.
 Repair.Arcane.Lost=[[RED]]Vous n\'\u00e9tiez pas suffisamment comp\u00e9tent pour pr\u00e9server les enchantements.
