--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -195,8 +195,8 @@ Repair.Skills.Mastery=[[RED]]Maestria nella Riparazione: [[YELLOW]]Recuperato il
 Repair.Skills.StackedItems=[[DARK_RED]]Non puoi riparare oggetti ammucchiati.
 Repair.Skills.Super.Chance=[[RED]]Probabilit\u00e0 di Super Riparazione: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]L\'abilit\u00e0 Riparazione \u00e8 aumentata di {0}. Totale ({1})
-Repair.Arcane.Chance.Downgrade=[[GRAY]]Probabilit\u00e0 di Degradazione di FA: [[YELLOW]]{0}
-Repair.Arcane.Chance.Success=[[GRAY]]Tasso di Successo di FA: [[YELLOW]]{0}
+Repair.Arcane.Chance.Downgrade=[[GRAY]]Probabilit\u00e0 di Degradazione di FA: [[YELLOW]]{0}%
+Repair.Arcane.Chance.Success=[[GRAY]]Tasso di Successo di FA: [[YELLOW]]{0}%
 Repair.Arcane.Downgrade=[[RED]]Il potere arcano di questo oggetto \u00e8 diminuito.
 Repair.Arcane.Fail=[[RED]]Il potere arcano ha abbandonato l\'oggetto permanentemente.
 Repair.Arcane.Lost=[[RED]]Non sei stato abbastanza abile da mantenere alcun incantesimo.
