--- a/src/main/resources/locale/locale_cy.properties
+++ b/src/main/resources/locale/locale_cy.properties
@@ -195,8 +195,8 @@ Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0} durability rest
 Repair.Skills.StackedItems=[[DARK_RED]]You can\'t repair stacked items.
 Repair.Skills.Super.Chance=[[RED]]Super Repair Chance: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]] sgiliau Atgyweirio cynyddu {0}. Cyfanswm ({1})
-Repair.Arcane.Chance.Downgrade=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}
-Repair.Arcane.Chance.Success=[[GRAY]] Cyfradd Llwyddiant AF: [[YELLOW]] {0}
+Repair.Arcane.Chance.Downgrade=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}%
+Repair.Arcane.Chance.Success=[[GRAY]] Cyfradd Llwyddiant AF: [[YELLOW]] {0}%
 Repair.Arcane.Downgrade=[[RED]]Arcane power has decreased for this item.
 Repair.Arcane.Fail=[[RED]]P\u0175er dirgel wedi gadael yr eitem barhaol
 Repair.Arcane.Lost=[[RED]]You were not skilled enough to keep any enchantments.
