--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,10 +10,12 @@ Key:
 Version 1.3.13-dev
  ! Overall SQL query improvements
  ! Reduced number of SQL queries for mcTop command from 11 to 1, speeding it up immensely
+ ! Changed FFS Leaderboards to hold information in memory rather than doing IO work (optimizations)
  + Added task to prune old and powerless users from the SQL database.
     *** WARNING: THIS WILL RUN AUTOMATICALLY ON YOUR DB. IF YOU ARE WORRIED ***
     *** ABOUT DATA LOSS, BACK UP YOUR SQL DATA BEFORE INSTALLING THIS BUILD ***
  + Added Craftbukkit 1.4.6 compatibility
+ + Added new /mcrank command for showing a players leader board ranking for all skills in one place
  + Added a configurable durability cap for ArmorImpact to advanced.yml
  + Added the version number to /mcmmo
  + Added bats, giants, witches, withers, and wither skeletons to the mcMMO combat experience list, and makes their experience drops configurable
