Start of major localization update.

--- a/src/main/resources/locale/locale_cy.properties
+++ b/src/main/resources/locale/locale_cy.properties
@@ -159,6 +159,8 @@ Mining.Blast.Radius.Increase=[[RED]] Chwyth Cynnydd Radiws [[YELLOW]] {0}
 Mining.Blast.Rank=[[RED]]Blast Mining: [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Blast Mining!
 Mining.Blast.Refresh=[[GREEN]] Eich [[YELLOW]] Mwyngloddio Chwyth [[GREEN]] gallu ei hadnewyddu!
+Repair.AnvilPlaced.Spout1=[mcMMO] Anvil Placed
+Repair.AnvilPlaced.Spout2=Right click to repair!
 Repair.Effect.0=Repair
 Repair.Effect.1=Repair Tools & Armor
 Repair.Effect.10=Gold Repair ({0}+ SKILL)
@@ -277,6 +279,8 @@ Unarmed.Ability.Bonus.0=Iron Arm Style
 Unarmed.Ability.Bonus.1=+{0} DMG Upgrade
 Unarmed.Ability.Chance.ArrowDeflect=[[RED]] Saeth wyro cyfle: [[YELLOW]] {0}
 Unarmed.Ability.Chance.Disarm=[[RED]]Disarm Chance: [[YELLOW]]{0}
+Unarmed.Ability.IronGrip.Attacker=[[RED]]Your opponent has an iron grip!
+Unarmed.Ability.IronGrip.Defender=[[GREEN]]Your iron grip kept you from being disarmed!
 Unarmed.Ability.Lower=[[GRAY]]**YOU LOWER YOUR FISTS**
 Unarmed.Ability.Ready=[[GREEN]]**YOU READY YOUR FISTS**
 Unarmed.Effect.0=Berserk (ABILITY)
@@ -450,9 +454,9 @@ Item.ChimaeraWing.Pass=**CHIMAERA ADAIN**
 Item.Injured.Wait=You were injured recently and must wait to use this. [[YELLOW]]({0}s)
 Skills.Disarmed=[[DARK_RED]] Rydych wedi cael eich diarfogi!
 Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
-Skills.NeedMore=[[DARK_RED]] y bydd angen mwy o
+Skills.NeedMore=[[DARK_RED]] y bydd angen mwy o [[GRAY]]{0}
 Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
-Skills.TooTired=[[RED]] Yr ydych yn rhy flinedig i ddefnyddio\'r gallu eto.
+Skills.TooTired=[[RED]] Yr ydych yn rhy flinedig i ddefnyddio\'r gallu eto. [[YELLOW]]({0}s)
 Stats.Header.Combat=[[GOLD]] - = GWRTHSEFYLL SGILIAU = -
 Stats.Header.Gathering=[[GOLD]] -= CASGLU SGILIAU = = -
 Stats.Header.Misc=[[GOLD]]-=MISC SKILLS=-
@@ -468,3 +472,8 @@ Perks.cooldowns.desc=Cuts cooldown duration by {0}.
 Perks.activationtime.name=Endurance
 Perks.activationtime.desc=Increases ability activation time by {0} seconds.
 Perks.activationtime.bonus=[[GOLD]] ({0}s with Endurance Perk)
+Hardcore.Player.Loss=[[GOLD]][mcMMO] [[DARK_RED]]You've lost [[BLUE]]{0}[[DARK_RED]] from death.
+Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was too unskilled to grant you any knowledge.
+Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]You've stolen [[BLUE]]{0}[[DARK_AQUA]] levels from [[YELLOW]]{1}.
+Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was unable to steal knowledge from you!
+Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] has stolen [[BLUE]]{1}[[DARK_RED]] levels from you!
