--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -184,6 +184,8 @@ Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] benutzte [[RED]]Z\u00FCndstoff!
 Mining.Blast.Refresh=[[GREEN]]Dein [[YELLOW]]Z\u00FCndstoff [[GREEN]]ist wieder bereit!
 
 #REPARATUR
+Repair.AnvilPlaced.Spout1=[mcMMO] Anvil Placed
+Repair.AnvilPlaced.Spout2=Right click to repair!
 Repair.Effect.0=Reparatur
 Repair.Effect.1=Repariere Werkzeuge & R\u00FCstung
 Repair.Effect.10=Gold Reparatur ({0}+ SKILL)
@@ -310,6 +312,8 @@ Unarmed.Ability.Bonus.0=Eiserner Arm
 Unarmed.Ability.Bonus.1=+{0} Schadens-Bonus
 Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Pfeile ablenken Chance: [[YELLOW]]{0}
 Unarmed.Ability.Chance.Disarm=[[RED]]Entwaffnen Chance: [[YELLOW]]{0}
+Unarmed.Ability.IronGrip.Attacker=[[RED]]Your opponent has an iron grip!
+Unarmed.Ability.IronGrip.Defender=[[GREEN]]Your iron grip kept you from being disarmed!
 Unarmed.Ability.Lower=[[GRAY]]**Du senkst deine F\u00C4USTE**
 Unarmed.Ability.Ready=[[GREEN]]**Deine F\u00C4USTE sind bereit**
 Unarmed.Effect.0=Berserker (F\u00E4higkeit)
@@ -511,9 +515,9 @@ Item.Injured.Wait=[[WHITE]]Du wurdest k\u00FCrzlich verletzt und musst [[YELLOW]
 #SKILLS
 Skills.Disarmed=[[DARK_RED]]Du wurdest entwaffnet!
 Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
-Skills.NeedMore=[[DARK_RED]]Du ben\u00F6tigst mehr
+Skills.NeedMore=[[DARK_RED]]Du ben\u00F6tigst mehr [[GRAY]]{0}
 Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
-Skills.TooTired=[[RED]]Du bist zu ausgelaugt, um diese F\u00E4higkeit wieder nutzen zu k\u00F6nnen.
+Skills.TooTired=[[RED]]Du bist zu ausgelaugt, um diese F\u00E4higkeit wieder nutzen zu k\u00F6nnen. [[YELLOW]]({0}s)
 
 #STATISTICS
 Stats.Header.Combat=[[GOLD]]-=KAMPF SKILLS=-
@@ -533,3 +537,10 @@ Perks.cooldowns.desc=Verk\u00FCrzt die Cooldownzeit um {0}.
 Perks.activationtime.name=Ausdauer
 Perks.activationtime.desc=Erh\u00F6ht die Aktivierungszeit von F\u00E4higkeiten um {0} Sekunden.
 Perks.activationtime.bonus=[[GOLD]] ({0}s with Endurance Perk)
+
+#HARDCORE
+Hardcore.Player.Loss=[[GOLD]][mcMMO] [[DARK_RED]]You've lost [[BLUE]]{0}[[DARK_RED]] from death.
+Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was too unskilled to grant you any knowledge.
+Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]You've stolen [[BLUE]]{0}[[DARK_AQUA]] levels from [[YELLOW]]{1}.
+Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was unable to steal knowledge from you!
+Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] has stolen [[BLUE]]{1}[[DARK_RED]] levels from you!
