More localization updates.

--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -393,6 +393,8 @@ Commands.Invite.Accepted=[[GREEN]]Einladung akzeptiert. Du bist der Gruppe {0} b
 Commands.Invite.Success=[[GREEN]]Einladung erfolgreich versendet.
 Commands.Leaderboards=<skill> <seite> [[RED]]- Ranglisten
 Commands.mcgod=[[RED]]- GodMode umschalten
+Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
+Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{0}
 Commands.mmoedit=[Spieler] <skill> <newvalue> [[RED]] - Ziel modifizieren
 Commands.ModDescription=[[RED]]- Mod-Informationen Lesen.
 Commands.NoConsole=Dieser Command wird nicht per Console unterst\u00FCtzt.
