Sync all current locale changes across languages.
Also fixes the missing % signs in some locale strings.

--- a/src/main/resources/locale/locale_cy.properties
+++ b/src/main/resources/locale/locale_cy.properties
@@ -147,14 +147,14 @@ Mining.Skills.SuperBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]S
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]] Eich [[YELLOW]] Super Torri\'r [[GREEN]] gallu ei hadnewyddu!
 Mining.Skillup=[[YELLOW]] sgiliau Mwyngloddio cynyddu {0}. Cyfanswm ({1})
 Mining.Blast.Boom=[[GRAY]]**BOOM**
-Mining.Blast.Effect.0=+35 ore yield
-Mining.Blast.Effect.1=+40 ore yield
-Mining.Blast.Effect.2=+45 ore yield, no debris
-Mining.Blast.Effect.3=+50 ore yield, no debris
-Mining.Blast.Effect.4=+55 ore yield, no debris, double drops
-Mining.Blast.Effect.5=+60 ore yield, no debris, double drops
-Mining.Blast.Effect.6=+65 ore yield, no debris, triple drops
-Mining.Blast.Effect.7=+70 ore yield, no debris, triple drops
+Mining.Blast.Effect.0=+35% ore yield
+Mining.Blast.Effect.1=+40% ore yield
+Mining.Blast.Effect.2=+45% ore yield, no debris
+Mining.Blast.Effect.3=+50% ore yield, no debris
+Mining.Blast.Effect.4=+55% ore yield, no debris, double drops
+Mining.Blast.Effect.5=+60% ore yield, no debris, double drops
+Mining.Blast.Effect.6=+65% ore yield, no debris, triple drops
+Mining.Blast.Effect.7=+70% ore yield, no debris, triple drops
 Mining.Blast.Radius.Increase=[[RED]] Chwyth Cynnydd Radiws [[YELLOW]] {0}
 Mining.Blast.Rank=[[RED]]Blast Mining: [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Blast Mining!
@@ -217,9 +217,9 @@ Swords.Combat.Counter.Hit=[[DARK_RED]]Hit with a counter-attack!
 Swords.Combat.Countered=[[GREEN]] ** GWRTH-YMOSOD **
 Swords.Combat.SS.Struck=[[DARK_RED]] Taro gan Streiciau danheddog!
 Swords.Effect.0=Counter Attack
-Swords.Effect.1=Reflect 50 of damage taken
+Swords.Effect.1=Reflect 50% of damage taken
 Swords.Effect.2=Serrated Strikes (ABILITY)
-Swords.Effect.3=25 DMG AoE, Bleed+ AoE
+Swords.Effect.3=25% DMG AoE, Bleed+ AoE
 Swords.Effect.4=Serrated Strikes Bleed+
 Swords.Effect.5=5 Tick Bleed
 Swords.Effect.6=Bleed
@@ -242,7 +242,7 @@ Taming.Ability.Bonus.5=Explosives do 1/6 normal damage
 Taming.Ability.Bonus.6=Sharpened Claws
 Taming.Ability.Bonus.7=+2 Damage
 Taming.Ability.Bonus.8=Fast Food Service
-Taming.Ability.Bonus.9={0} Chance for heal on attack
+Taming.Ability.Bonus.9={0}% Chance for heal on attack
 Taming.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (ENVIRONMENTALLY AWARE)
 Taming.Ability.Locked.1=LOCKED UNTIL {0}+ SKILL (THICK FUR)
 Taming.Ability.Locked.2=LOCKED UNTIL {0}+ SKILL (SHOCK PROOF)
@@ -284,7 +284,7 @@ Unarmed.Ability.IronGrip.Defender=[[GREEN]]Your iron grip kept you from being di
 Unarmed.Ability.Lower=[[GRAY]]**YOU LOWER YOUR FISTS**
 Unarmed.Ability.Ready=[[GREEN]]**YOU READY YOUR FISTS**
 Unarmed.Effect.0=Berserk (ABILITY)
-Unarmed.Effect.1=+50 DMG, Breaks weak materials
+Unarmed.Effect.1=+50% DMG, Breaks weak materials
 Unarmed.Effect.2=Disarm (Players)
 Unarmed.Effect.3=Drops the foes item held in hand
 Unarmed.Effect.4=Iron Arm Style
@@ -352,7 +352,7 @@ Commands.Leaderboards=<skill> <page> [[RED]]- Leaderboards
 Commands.mcgod=[[RED]]- Toggle GodMode
 Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
 Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{0}
-
+Commands.mcrank.Unranked=[[WHITE]]Unranked
 Commands.mmoedit=[chwaraewr] <skill> <newvalue>  [[RED]] - Targed addasu
 Commands.ModDescription=[[RED]]- Read brief mod description
 Commands.NoConsole=This command does not support console usage.
@@ -474,8 +474,8 @@ Stats.Own.Stats=[[GREEN]][mcMMO] Ystadegau
 Perks.xp.name=Experience
 Perks.xp.desc=Receive {0}x XP.
 Perks.lucky.name=Luck
-Perks.lucky.desc=Gives {0} skills and abilities a 33.3 better chance to activate.
-Perks.lucky.desc.login=Gives certain skills and abilities a 33.3 better chance to activate.
+Perks.lucky.desc=Gives {0} skills and abilities a 33.3% better chance to activate.
+Perks.lucky.desc.login=Gives certain skills and abilities a 33.3% better chance to activate.
 Perks.lucky.bonus=[[GOLD]] ({0} with Lucky Perk)
 Perks.cooldowns.name=Fast Recovery
 Perks.cooldowns.desc=Cuts cooldown duration by {0}.
@@ -495,3 +495,10 @@ Spout.Menu.HudButton.1=HUD Type: {0}
 Spout.Menu.HudButton.2=Change your HUD style!
 Spout.Menu.Title=[[GOLD]]~mcMMO Menu~
 Spout.Title={0}\n[[YELLOW]]P[[GOLD]]lvl[[WHITE]].[[GREEN]]{1}
+MOTD.Hardcore.VampireOff=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore & Vampirism enabled.
+MOTD.Hardcore.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Skill Death Penalty: [[DARK_RED]]{0}%
+MOTD.Hardcore.VampireOn=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore enabled.
+MOTD.PerksPrefix=[[RED]][mcMMO Perks] 
+MOTD.Vampire.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Vampirism Stat Leech: [[DARK_RED]]{0}%
+MOTD.Version=[[GOLD]][mcMMO] Running version [[DARK_AQUA]]{0}
+MOTD.Website=[[GOLD]][mcMMO] [[GREEN]]{0}[[YELLOW]] - mcMMO Website
