--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -170,14 +170,14 @@ Mining.Skillup=[[YELLOW]]Bergbau Skill um {0} gestiegen. Gesamt ({1})
 
 #Z\u00FCndstoff
 Mining.Blast.Boom=[[GRAY]]**BOOM**
-Mining.Blast.Effect.0=+35 Erz-Ausbeute
-Mining.Blast.Effect.1=+40 Erz-Ausbeute
-Mining.Blast.Effect.2=+45 Erz-Ausbeute, kein Schutt
-Mining.Blast.Effect.3=+50 Erz-Ausbeute, kein Schutt
-Mining.Blast.Effect.4=+55 Erz-Ausbeute, kein Schutt, Doppel-Drops
-Mining.Blast.Effect.5=+60 Erz-Ausbeute, kein Schutt, Doppel-Drops
-Mining.Blast.Effect.6=+65 Erz-Ausbeute, kein Schutt, Dreifach-Drops
-Mining.Blast.Effect.7=+70 Erz-Ausbeute, kein Schutt, Dreifach-Drops
+Mining.Blast.Effect.0=+35% Erz-Ausbeute
+Mining.Blast.Effect.1=+40% Erz-Ausbeute
+Mining.Blast.Effect.2=+45% Erz-Ausbeute, kein Schutt
+Mining.Blast.Effect.3=+50% Erz-Ausbeute, kein Schutt
+Mining.Blast.Effect.4=+55% Erz-Ausbeute, kein Schutt, Doppel-Drops
+Mining.Blast.Effect.5=+60% Erz-Ausbeute, kein Schutt, Doppel-Drops
+Mining.Blast.Effect.6=+65% Erz-Ausbeute, kein Schutt, Dreifach-Drops
+Mining.Blast.Effect.7=+70% Erz-Ausbeute, kein Schutt, Dreifach-Drops
 Mining.Blast.Radius.Increase=[[RED]]Z\u00FCndstoff Radius Erh\u00F6hung: [[YELLOW]]+{0}
 Mining.Blast.Rank=[[RED]]Z\u00FCndstoff Rang:[[YELLOW]] {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] benutzte [[RED]]Z\u00FCndstoff!
@@ -246,9 +246,9 @@ Swords.Combat.Counter.Hit=[[DARK_RED]]Treffer durch Gegenangriff!
 Swords.Combat.Countered=[[GREEN]]**GEGENANGRIFF**
 Swords.Combat.SS.Struck=[[DARK_RED]]Getroffen von S\u00C4GEZAHNSCHLAG!
 Swords.Effect.0=Gegenangriff
-Swords.Effect.1=Reflektiert 50 des erhaltenen Schadens
+Swords.Effect.1=Reflektiert 50% des erhaltenen Schadens
 Swords.Effect.2=S\u00E4gezahnschlag (F\u00E4higkeit)
-Swords.Effect.3=25 Umgebungsschaden, Blutung+
+Swords.Effect.3=25% Umgebungsschaden, Blutung+
 Swords.Effect.4=S\u00E4gezahnschlag, Blutung+
 Swords.Effect.5=5 Ticks Blutung
 Swords.Effect.6=Blutung
@@ -273,7 +273,7 @@ Taming.Ability.Bonus.5=Explosionen verursachen 1/6 Schaden
 Taming.Ability.Bonus.6=Gesch\u00E4rfte Krallen
 Taming.Ability.Bonus.7=+2 Schaden
 Taming.Ability.Bonus.8=Schnell-Imbiss
-Taming.Ability.Bonus.9={0} Chance auf Heilung bei Attacke
+Taming.Ability.Bonus.9={0}% Chance auf Heilung bei Attacke
 Taming.Ability.Locked.0=GESPERRT bis Skill {0}+ (Umweltbewusst)
 Taming.Ability.Locked.1=GESPERRT bis Skill {0}+ (Dicker Pelz)
 Taming.Ability.Locked.2=GESPERRT bis Skill {0}+ (Schock-Sicher)
@@ -317,7 +317,7 @@ Unarmed.Ability.IronGrip.Defender=[[GREEN]]Your iron grip kept you from being di
 Unarmed.Ability.Lower=[[GRAY]]**Du senkst deine F\u00C4USTE**
 Unarmed.Ability.Ready=[[GREEN]]**Deine F\u00C4USTE sind bereit**
 Unarmed.Effect.0=Berserker (F\u00E4higkeit)
-Unarmed.Effect.1=+50 Schaden, Zerbricht weiche Materialien
+Unarmed.Effect.1=+50% Schaden, Zerbricht weiche Materialien
 Unarmed.Effect.2=Entwaffnen (Spieler)
 Unarmed.Effect.3=Dropt Gegenstand aus der Hand des Feindes
 Unarmed.Effect.4=Eiserner Arm
@@ -395,6 +395,7 @@ Commands.Leaderboards=<skill> <seite> [[RED]]- Ranglisten
 Commands.mcgod=[[RED]]- GodMode umschalten
 Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
 Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{0}
+Commands.mcrank.Unranked=[[WHITE]]Unranked
 Commands.mmoedit=[Spieler] <skill> <newvalue> [[RED]] - Ziel modifizieren
 Commands.ModDescription=[[RED]]- Mod-Informationen Lesen.
 Commands.NoConsole=Dieser Command wird nicht per Console unterst\u00FCtzt.
@@ -538,8 +539,8 @@ Stats.Own.Stats=[[GREEN]][mcMMO] Werte
 Perks.xp.name=Erfahrung
 Perks.xp.desc=Erhalte {0}x XP.
 Perks.lucky.name=Gl\u00FCck
-Perks.lucky.desc=33.3 Erh\u00F6hte Chance auf Aktivierung von {0} Skills & F\u00E4higkeiten.
-Perks.lucky.desc.login=33.3 Erh\u00F6hte Chance auf Aktivierung von gewissen Skills & F\u00E4higkeiten.
+Perks.lucky.desc=33.3% Erh\u00F6hte Chance auf Aktivierung von {0} Skills & F\u00E4higkeiten.
+Perks.lucky.desc.login=33.3% Erh\u00F6hte Chance auf Aktivierung von gewissen Skills & F\u00E4higkeiten.
 Perks.lucky.bonus=[[GOLD]] ({0} mit Gl\u00FCck-Perk)
 Perks.cooldowns.name=Schnelle Wiederherstellung
 Perks.cooldowns.desc=Verk\u00FCrzt die Cooldownzeit um {0}.
@@ -563,3 +564,12 @@ Spout.Menu.HudButton.1=HUD Type: {0}
 Spout.Menu.HudButton.2=Change your HUD style!
 Spout.Menu.Title=[[GOLD]]~mcMMO Menu~
 Spout.Title={0}\n[[YELLOW]]P[[GOLD]]lvl[[WHITE]].[[GREEN]]{1}
+
+#MOTD
+MOTD.Hardcore.VampireOff=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore & Vampirism enabled.
+MOTD.Hardcore.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Skill Death Penalty: [[DARK_RED]]{0}%
+MOTD.Hardcore.VampireOn=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore enabled.
+MOTD.PerksPrefix=[[RED]][mcMMO Perks] 
+MOTD.Vampire.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Vampirism Stat Leech: [[DARK_RED]]{0}%
+MOTD.Version=[[GOLD]][mcMMO] Running version [[DARK_AQUA]]{0}
+MOTD.Website=[[GOLD]][mcMMO] [[GREEN]]{0}[[YELLOW]] - mcMMO Website
