--- a/src/main/resources/locale/locale_pt_BR.properties
+++ b/src/main/resources/locale/locale_pt_BR.properties
@@ -27,7 +27,7 @@ Archery.SkillName=ARCHERY
 Archery.Skillup=[[YELLOW]]Archery skill increased by {0}. Total ({1})
 Axes.Ability.Bonus.0=Axe Mastery
 Axes.Ability.Bonus.1=Bonus {0} damage
-Axes.Ability.Bonus.2=Impact
+Axes.Ability.Bonus.2=Armor Impact
 Axes.Ability.Bonus.3=Deal {0} Bonus DMG to armor
 Axes.Ability.Bonus.4=Greater Impact
 Axes.Ability.Bonus.5=Deal {0} Bonus DMG to unarmored foes
@@ -46,7 +46,7 @@ Axes.Effect.2=Critical Strikes
 Axes.Effect.3=Double Damage
 Axes.Effect.4=Axe Mastery
 Axes.Effect.5=Adds bonus DMG
-Axes.Effect.6=Impact
+Axes.Effect.6=Armor Impact
 Axes.Effect.7=Strike with enough force to shatter armor
 Axes.Effect.8=Greater Impact
 Axes.Effect.9=Deal bonus damage to unarmored foes
@@ -159,6 +159,8 @@ Mining.Blast.Radius.Increase=[[RED]]Blast Radius Increase: [[YELLOW]]+{0}
 Mining.Blast.Rank=[[RED]]Blast Mining: [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Blast Mining!
 Mining.Blast.Refresh=[[GREEN]]Your [[YELLOW]]Blast Mining [[GREEN]]ability is refreshed!
+Repair.AnvilPlaced.Spout1=[mcMMO] Anvil Placed
+Repair.AnvilPlaced.Spout2=Right click to repair!
 Repair.Effect.0=Repair
 Repair.Effect.1=Repair Tools & Armor
 Repair.Effect.10=Gold Repair ({0}+ SKILL)
@@ -277,6 +279,8 @@ Unarmed.Ability.Bonus.0=Iron Arm Style
 Unarmed.Ability.Bonus.1=+{0} DMG Upgrade
 Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Arrow Deflect Chance: [[YELLOW]]{0}
 Unarmed.Ability.Chance.Disarm=[[RED]]Disarm Chance: [[YELLOW]]{0}
+Unarmed.Ability.IronGrip.Attacker=[[RED]]Your opponent has an iron grip!
+Unarmed.Ability.IronGrip.Defender=[[GREEN]]Your iron grip kept you from being disarmed!
 Unarmed.Ability.Lower=[[GRAY]]**YOU LOWER YOUR FISTS**
 Unarmed.Ability.Ready=[[GREEN]]**YOU READY YOUR FISTS**
 Unarmed.Effect.0=Berserk (ABILITY)
@@ -334,6 +338,7 @@ Commands.Ability.Off=Ability use toggled [[RED]]off
 Commands.Ability.On=Ability use toggled [[GREEN]]on
 Commands.AdminChat.Off=Admin Chat only [[RED]]Off
 Commands.AdminChat.On=Admin Chat only [[GREEN]]On
+Commands.AdminChat.Prefix=[[AQUA]]{[[WHITE]]{0}[[AQUA]]}
 Commands.AdminToggle=[[RED]]- Toggle admin chat
 Commands.Disabled=[[RED]]This command is disabled.
 Commands.DoesNotExist=[[RED]]Player does not exist in the database!
@@ -345,6 +350,9 @@ Commands.Invite.Accepted=[[GREEN]]Invite Accepted. You have joined party {0}
 Commands.Invite.Success=[[GREEN]]Invite sent successfully.
 Commands.Leaderboards=<skill> <page> [[RED]]- Leaderboards
 Commands.mcgod=[[RED]]- Toggle GodMode
+Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
+Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{0}
+Commands.mcrank.Unranked=[[WHITE]]Unranked
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - Modify target
 Commands.ModDescription=[[RED]]- Read brief mod description
 Commands.NoConsole=This command does not support console usage.
@@ -352,6 +360,7 @@ Commands.Other=[[GREEN]]--OTHER COMMANDS--
 Commands.Party.Accept=[[RED]]- Accept party invite
 Commands.Party.Chat.Off=Party Chat only [[RED]]Off
 Commands.Party.Chat.On=Party Chat only [[GREEN]]On
+Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--PARTY COMMANDS--
 Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]You have received a party invite for {0} from {1}
 Commands.Party.Invite.1=[[YELLOW]]Type [[GREEN]]/accept[[YELLOW]] to accept the invite
@@ -377,11 +386,9 @@ Commands.SkillInfo=/<skill> [[RED]]- View detailed information about a skill
 Commands.Stats.Self=YOUR STATS
 Commands.Stats=[[RED]]- View your mcMMO stats
 Commands.ToggleAbility=[[RED]]- Toggle ability activation with right click
-mcMMO.MOTD=[[BLUE]]This server is running mcMMO {0}! \n Type [[YELLOW]]/mcmmo[[BLUE]] for help.
 mcMMO.NoInvites=[[RED]]You have no invites at this time
 mcMMO.NoPermission=[[DARK_RED]]Insufficient permissions.
 mcMMO.NoSkillNote=[[DARK_GRAY]]If you don\'t have access to a skill it will not be shown here.
-mcMMO.Website=[[GREEN]]http://forums.mcmmo.info[[BLUE]] - mcMMO Website
 Commands.Party.InParty=[[GREEN]]Party: {0}
 Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
 Party.Help.0=[[RED]]Proper usage is /party <party-name> to join or /party q to quit
@@ -433,16 +440,21 @@ Effects.Effects=EFFECTS
 Effects.Level=[[DARK_GRAY]]LVL: [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
 Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
 Guides.Acrobatics=[[DARK_AQUA]]About Acrobatics:\n[[YELLOW]]Acrobatics is the art of moving gracefully in mcMMO.\n[[YELLOW]]It provides combat bonuses and environment damage bonuses.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you need to perform a dodge\n[[YELLOW]]in combat or survive falls from heights that damage you.\n\n[[DARK_AQUA]]How does Rolling work?\n[[YELLOW]]You have a passive chance when you take fall damage\n[[YELLOW]]to negate the damage done. You can hold the sneak button to\n[[YELLOW]]double your chances during the fall.\n[[YELLOW]]This triggers a Graceful Roll instead of a standard one.\n[[YELLOW]]Graceful Rolls are like regular rolls but are twice as likely to\n[[YELLOW]]occur and provide more damage safety than regular rolls.\n[[YELLOW]]Rolling chance is tied to your skill level\n[[DARK_AQUA]]How does Dodge work?\n[[YELLOW]]Dodge is a passive chance when you are\n[[YELLOW]]injured in combat to halve the damage taken.\n[[YELLOW]]It is tied to your skill level.
-Guides.Archery=[[DARK_AQUA]]About Archery:\n[[YELLOW]]Archery is about shooting with your bow and arrow.\n[[YELLOW]]It provides various combat bonuses, such as a damage boost\n[[YELLOW]]that scales with your level and the ability to daze your\n[[YELLOW]]opponents in PvP. In addition to this, you can retrieve\n[[YELLOW]]some of your spent arrows from the corpses of your foes.\n\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you need to shoot mobs or\n[[YELLOW]]other players.\n\n[[DARK_AQUA]]How does Skill Shot work?\n[[YELLOW]]Skill Shot provides additional damage to your shots.\n[[YELLOW]]The bonus damage from Skill Shot increases as you\n[[YELLOW]]level in Archery.\n[[YELLOW]]With the default settings, your archery damage increase 10%\n[[YELLOW]]every 50 levels, to a maximum of 200% bonus damage.\n\n[[DARK_AQUA]]How does Daze work?\n[[YELLOW]]You have a passive chance to daze other players when\n[[YELLOW]]you shoot them. When Daze triggers it forces your opponents\n[[YELLOW]]to look straight up for a short duration.\n[[YELLOW]]A Daze shot also deals an additional 4 damage (2 hearts).\n[[DARK_AQUA]]How does Arrow Retrieval work?\n[[YELLOW]]You have a passive chance to retrieve some of your arrows\n[[YELLOW]]when you kill a mob with your bow.\n[[YELLOW]]This chance increases as you level in Archery.\n[[YELLOW]]By default, this ability increases by 0.1% per level, up to 100%\n[[YELLOW]]at level 1000.
-Guides.Axes=[[DARK_AQUA]]About Axes:\n[[YELLOW]]With the Axes skill you can use your axe for much more then\n[[YELLOW]]just deforesting! You can hack and chop away at mobs\n[[YELLOW]]and players to gain XP, hitting mobs with the effect of\n[[YELLOW]]knockback and inflicting DEADLY criticals on mobs and players.\n[[YELLOW]]Your axe also becomes a hand-held woodchipper,\n[[YELLOW]]breaking down the enemy's armor with ease as your level\n[[YELLOW]]increases.\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you need hit other mobs or players\n[[YELLOW]]with an Axe.\n\n[[DARK_AQUA]]How does Skull Splitter work?\n[[YELLOW]]This ability allows you to deal an AoE (Area of Effect) hit.\n[[YELLOW]]This AoE hit will deal half as much damage as you did to the\n[[YELLOW]]main target, so it's great for clearing out large piles of mobs.\n[[DARK_AQUA]]How does Critical Strikes work?\n[[YELLOW]]Critical Strikes is a passive ability which gives players a\n[[YELLOW]]chance to deal additional damage.\n[[YELLOW]]With the default settings, every 2 skill levels in Axes awards a\n[[YELLOW]]0.1% chance to deal a Critical Strike, causing 2.0 times damage\n[[YELLOW]]to mobs or 1.5 times damage against other players.\n\n\n[[DARK_AQUA]]How does Axe Mastery work?\n[[YELLOW]]Axe Mastery is a passive ability that will add additional damage\n[[YELLOW]]to your hits when using Axes.\n[[YELLOW]]By default, the bonus damage increases by 1 every 50 levels,\n[[YELLOW]]up to a cap of 4 extra damage at level 200.\n\n\n\n[[DARK_AQUA]]How does Armor Impact work?\n[[YELLOW]]Strike with enough force to shatter armor!\n[[YELLOW]]Armor Impact has a passive chance to damage your\n[[YELLOW]]opponent's armor. This damage increases as you level in Axes.\n\n\n\n\n[[DARK_AQUA]]How does Greater Impact work?\n[[YELLOW]]You have a passive chance to achieve a greater impact when\n[[YELLOW]]hitting mobs or players with your axe.\n[[YELLOW]]By default this chance is 25%. This passive ability has an\n[[YELLOW]]extreme knockback effect, similar to the Knockback II\n[[YELLOW]]enchantment. In addition, it deals bonus damage to the target.
+Guides.Archery=Guide coming soon...
+Guides.Axes=Guide coming soon...
+Guides.Available=[[DARK_AQUA]]Guide for {0} available - type /{1} ? [page]
 Guides.Excavation=[[DARK_AQUA]]About Excavation:\n[[YELLOW]]Excavation is the act of digging up dirt to find treasures.\n[[YELLOW]]By excavating the land you will find treasures.\n[[YELLOW]]The more you do this the more treasures you can find.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you must dig with a shovel in hand.\n[[YELLOW]]Only certain materials can be dug up for treasures and XP.\n[[DARK_AQUA]]Compatible Materials:\n[[YELLOW]]Grass, Dirt, Sand, Clay, Gravel, Mycelium, Soul Sand\n\n[[DARK_AQUA]]How to use Giga Drill Breaker:\n[[YELLOW]]With a shovel in hand right click to ready your tool.\n[[YELLOW]]Once in this state you have about 4 seconds to make\n[[YELLOW]]contact with Excavation compatible materials this will\n[[YELLOW]]activate Giga Drill Breaker.\n[[DARK_AQUA]]What is Giga Drill Breaker?\n[[YELLOW]]Giga Drill Breaker is an ability with a cooldown\n[[YELLOW]]tied to Excavation skill. It triples your chance\n[[YELLOW]]of finding treasures and enables instant break\n[[YELLOW]]on Excavation materials.\n\n[[DARK_AQUA]]How does Treasure Hunter work?\n[[YELLOW]]Every possible treasure for Excavation has its own\n[[YELLOW]]skill level requirement for it to drop, as a result it\'s\n[[YELLOW]]difficult to say how much it is helping you.\n[[YELLOW]]Just keep in mind that the higher your Excavation skill\n[[YELLOW]]is, the more treasures that can be found.\n[[YELLOW]]And also keep in mind that each type of Excavation\n[[YELLOW]]compatible material has its own unique list of treasures.\n[[YELLOW]]In other words you will find different treasures in Dirt\n[[YELLOW]]than you would in Gravel.\n[[DARK_AQUA]]Notes about Excavation:\n[[YELLOW]]Excavation drops are completely customizeable\n[[YELLOW]]So results vary server to server.
 Guides.Fishing=Guide coming soon...
+Guides.Header=[[GOLD]]-=[[GREEN]]{0} Guide[[GOLD]]=-
 Guides.Herbalism=Guide coming soon...
 Guides.Mining=[[DARK_AQUA]]About Mining:\n[[YELLOW]]Mining consists of mining stone and ores. It provides bonuses\n[[YELLOW]]to the amount of materials dropped while mining.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill, you must mine with a pickaxe in hand.\n[[YELLOW]]Only certain blocks award XP.\n\n[[DARK_AQUA]]Compatible Materials:\n[[YELLOW]]Stone, Coal Ore, Iron Ore, Gold Ore, Diamond Ore, Redstone Ore,\n[[YELLOW]]Lapis Ore, Obsidian, Mossy Cobblestone, Ender Stone,\n[[YELLOW]]Glowstone, and Netherrack.\n\n[[DARK_AQUA]]How to use Super Breaker:\n[[YELLOW]]With a pickaxe in your hand, right click to ready your tool.\n[[YELLOW]]Once in this state, you have about 4 seconds to make contact\n[[YELLOW]]with Mining compatible materials, which will activate Super\n[[YELLOW]]Breaker.\n\n[[DARK_AQUA]]What is Super Breaker?\n[[YELLOW]]Super Breaker is an ability with a cooldown tied to the Mining\n[[YELLOW]]skill. It triples your chance of extra items dropping and\n[[YELLOW]]enables instant break on Mining materials.\n\n[[DARK_AQUA]]How to use Blast Mining:\n[[YELLOW]]With a detonator in hand, which is a flint & steel by default,\n[[YELLOW]]right-click on TNT from a distance. This will cause the TNT\n[[YELLOW]]to instantly explode.\n\n[[DARK_AQUA]]How does Blast Mining work?\n[[YELLOW]]Blast Mining is an ability with a cooldown tied to the Mining\n[[YELLOW]]skill. It gives bonuses when mining with TNT and allows you\n[[YELLOW]]to remote detonate TNT. There are three parts to Blast Mining.\n[[YELLOW]]The first part is Bigger Bombs, which increases blast radius.\n[[YELLOW]]The second is Demolitions Expert, which decreases damage\n[[YELLOW]]from TNT explosions. The third part simply increases the\n[[YELLOW]]amount of ores dropped from TNT and decreases the\n[[YELLOW]]debris dropped.
+Guides.Page.Invalid=Not a valid page number!
+Guides.Page.OutOfRange=That page doesn\'t exist, there are only {0} total pages.
 Guides.Repair=Guide coming soon...
 Guides.Swords=Guide coming soon...
 Guides.Taming=Guide coming soon...
 Guides.Unarmed=Guide coming soon...
+Guides.Usage=[[RED]] Usage is /{0} ? [page]
 Guides.Woodcutting=Guide coming soon...
 Inspect.Offline=[[RED]]You do not have permission to inspect offline players!
 Inspect.OfflineStats=mcMMO Stats for Offline Player [[YELLOW]]{0}
@@ -471,3 +483,23 @@ Perks.cooldowns.desc=Cuts cooldown duration by {0}.
 Perks.activationtime.name=Endurance
 Perks.activationtime.desc=Increases ability activation time by {0} seconds.
 Perks.activationtime.bonus=[[GOLD]] ({0}s with Endurance Perk)
+Hardcore.Player.Loss=[[GOLD]][mcMMO] [[DARK_RED]]You\'ve lost [[BLUE]]{0}[[DARK_RED]] from death.
+Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was too unskilled to grant you any knowledge.
+Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]You\'ve stolen [[BLUE]]{0}[[DARK_AQUA]] levels from [[YELLOW]]{1}.
+Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was unable to steal knowledge from you!
+Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] has stolen [[BLUE]]{1}[[DARK_RED]] levels from you!
+Spout.LevelUp.1=[[GREEN]Level Up!
+Spout.LevelUp.2=[[YELLOW]]{0}[[DARK_AQUA]] ([[GREEN]]{1}[[DARK_AQUA]])
+Spout.Menu.Exit=[[GRAY]]Press ESCAPE to exit!
+Spout.Menu.ExitButton=EXIT
+Spout.Menu.HudButton.1=HUD Type: {0}
+Spout.Menu.HudButton.2=Change your HUD style!
+Spout.Menu.Title=[[GOLD]]~mcMMO Menu~
+Spout.Title={0}\n[[YELLOW]]P[[GOLD]]lvl[[WHITE]].[[GREEN]]{1}
+MOTD.Hardcore.VampireOff=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore & Vampirism enabled.
+MOTD.Hardcore.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Skill Death Penalty: [[DARK_RED]]{0}%
+MOTD.Hardcore.VampireOn=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore enabled.
+MOTD.PerksPrefix=[[RED]][mcMMO Perks]
+MOTD.Vampire.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Vampirism Stat Leech: [[DARK_RED]]{0}%
+MOTD.Version=[[GOLD]][mcMMO] Running version [[DARK_AQUA]]{0}
+MOTD.Website=[[GOLD]][mcMMO] [[GREEN]]{0}[[YELLOW]] - mcMMO Website
