--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -393,8 +393,10 @@ Commands.Invite.Accepted=[[GREEN]]Einladung akzeptiert. Du bist der Gruppe {0} b
 Commands.Invite.Success=[[GREEN]]Einladung erfolgreich versendet.
 Commands.Leaderboards=<skill> <seite> [[RED]]- Ranglisten
 Commands.mcgod=[[RED]]- GodMode umschalten
-Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
+Commands.mcrank.Heading=[[GOLD]]-=PERSONAL RANKINGS=-
 Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{0}
+Commands.mcrank.Player=[[RED]]TARGET: [[WHITE]]{0}
+Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
 Commands.mcrank.Unranked=[[WHITE]]Unranked
 Commands.mmoedit=[Spieler] <skill> <newvalue> [[RED]] - Ziel modifizieren
 Commands.ModDescription=[[RED]]- Mod-Informationen Lesen.
