Localize /mchud & /ptp

--- a/src/main/resources/locale/locale_cy.properties
+++ b/src/main/resources/locale/locale_cy.properties
@@ -350,6 +350,7 @@ Commands.Invite.Accepted=[[GREEN]] Gwahodd Derbyniwyd. Yr ydych wedi ymuno parti
 Commands.Invite.Success=[[GREEN]]Invite sent successfully.
 Commands.Leaderboards=<skill> <page> [[RED]]- Leaderboards
 Commands.mcgod=[[RED]]- Toggle GodMode
+Commands.mchud.Invalid=[[RED]]That is not a valid HUD type.
 Commands.mcrank.Heading=[[GOLD]]-=PERSONAL RANKINGS=-
 Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{0}
 Commands.mcrank.Player=[[RED]]TARGET: [[WHITE]]{0}
@@ -385,11 +386,11 @@ Commands.SkillInfo=/<skill> [[RED]]- View detailed information about a skill
 Commands.Stats.Self=YOUR STATS
 Commands.Stats=[[RED]]- View your mcMMO stats
 Commands.ToggleAbility=[[RED]]- Toggle ability activation with right click
-mcMMO.MOTD=[[BLUE]]This server is running mcMMO {0}! \n Type [[YELLOW]]/mcmmo[[BLUE]] for help.
+Commands.Usage.1=[[RED]]Proper usage is /{0} {1}
+Commands.Usage.Player=player
 mcMMO.NoInvites=[[RED]]You have no invites at this time
 mcMMO.NoPermission=[[DARK_RED]]Insufficient permissions.
 mcMMO.NoSkillNote=[[DARK_GRAY]]If you don\'t have access to a skill it will not be shown here.
-mcMMO.Website=[[GREEN]]http://forums.mcmmo.info[[BLUE]] - mcMMO Website
 Commands.Party.InParty=[[GREEN]]Parti: {0}
 Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
 Party.Help.0=[[RED]]Proper usage is /party <party-name> to join or /party q to quit
@@ -413,6 +414,7 @@ Party.Player.Invalid=[[RED]] Nid yw hynny\'n chwaraewr ddilys.
 Party.Teleport.Dead=[[RED]] Ni allwch teleport y chwaraewr yn farw.
 Party.Teleport.Hurt=[[RED]]You\'ve been hurt in the last {0} seconds and cannnot teleport.
 Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
+Party.Teleport.Self=[[RED]]You can't teleport to yourself!
 Party.Teleport.Target=[[GREEN]] {0} wedi teleported i chi.
 Party.Unlocked=[[GRAY]] Blaid yn cael ei gloi
 Commands.XPGain.Acrobatics=Falling
