--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -393,6 +393,7 @@ Commands.Invite.Accepted=[[GREEN]]Einladung akzeptiert. Du bist der Gruppe {0} b
 Commands.Invite.Success=[[GREEN]]Einladung erfolgreich versendet.
 Commands.Leaderboards=<skill> <seite> [[RED]]- Ranglisten
 Commands.mcgod=[[RED]]- GodMode umschalten
+Commands.mchud.Invalid=[[RED]]That is not a valid HUD type.
 Commands.mcrank.Heading=[[GOLD]]-=PERSONAL RANKINGS=-
 Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{0}
 Commands.mcrank.Player=[[RED]]TARGET: [[WHITE]]{0}
@@ -431,11 +432,11 @@ Commands.SkillInfo=/<skill> [[RED]]- Zeigt detalierte Infos \u00FCber einen Skil
 Commands.Stats.Self=DEINE WERTE
 Commands.Stats=[[RED]]- Zeigt deine mcMMO Werte
 Commands.ToggleAbility=[[RED]]- F\u00E4higkeiten-Aktivierung per Rechtsklick umschalten
-mcMMO.MOTD=[[BLUE]]Auf diesem Server l\u00E4uft mcMMO {0}! \n schreibe [[YELLOW]]/mcmmo[[BLUE]] f\u00FCr weitere Hilfe.
+Commands.Usage.1=[[RED]]Proper usage is /{0} {1}
+Commands.Usage.Player=player
 mcMMO.NoInvites=[[RED]]Du hast derzeit keine Einladungen
 mcMMO.NoPermission=[[DARK_RED]]Unzureichende Rechte.
 mcMMO.NoSkillNote=[[DARK_GRAY]]F\u00FCr dich nicht verf\u00FCgbare Skills werden ausgeblendet.
-mcMMO.Website=[[GREEN]]http://forums.mcmmo.info[[BLUE]] - mcMMO Website
 
 ##GRUPPE
 Commands.Party.InParty=[[GREEN]]Gruppe: {0}
@@ -461,6 +462,7 @@ Party.Player.Invalid=[[RED]]Dies ist kein g\u00FCltiger Spieler.
 Party.Teleport.Dead=[[RED]]Du kannst dich nicht zu toten Spielern teleportieren
 Party.Teleport.Hurt=[[RED]]Du wurdest in den letzten {0} Sekunden verletzt und kannst dich nicht teleportieren.
 Party.Teleport.Player=[[GREEN]]Du wurdest zu {0} teleportiert.
+Party.Teleport.Self=[[RED]]You can't teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} hat sich zu dir teleportiert.
 Party.Unlocked=[[GRAY]]Gruppe ist entsperrt.
 
