--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -402,6 +402,7 @@ Commands.Invite.Accepted=[[GREEN]]Invite Accepted. You have joined party {0}
 Commands.Invite.Success=[[GREEN]]Invite sent successfully.
 Commands.Leaderboards=<skill> <page> [[RED]]- Leaderboards
 Commands.mcgod=[[RED]]- Toggle GodMode
+Commands.mchud.Invalid=[[RED]]That is not a valid HUD type.
 Commands.mcrank.Heading=[[GOLD]]-=PERSONAL RANKINGS=-
 Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{0}
 Commands.mcrank.Player=[[RED]]TARGET: [[WHITE]]{0}
@@ -441,6 +442,7 @@ Commands.Stats.Self=YOUR STATS
 Commands.Stats=[[RED]]- View your mcMMO stats
 Commands.ToggleAbility=[[RED]]- Toggle ability activation with right click
 Commands.Usage.1=[[RED]]Proper usage is /{0} {1}
+Commands.Usage.Player=player
 mcMMO.NoInvites=[[RED]]You have no invites at this time
 mcMMO.NoPermission=[[DARK_RED]]Insufficient permissions.
 mcMMO.NoSkillNote=[[DARK_GRAY]]If you don't have access to a skill it will not be shown here.
@@ -469,6 +471,7 @@ Party.Player.Invalid=[[RED]]That is not a valid player.
 Party.Teleport.Dead=[[RED]]You can't teleport to a dead player.
 Party.Teleport.Hurt=[[RED]]You've been hurt in the last {0} seconds and cannnot teleport.
 Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
+Party.Teleport.Self=[[RED]]You can't teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} has teleported to you.
 Party.Unlocked=[[GRAY]]Party is unlocked
 
