Localize chat commands and /invite

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -392,6 +392,7 @@ Commands.AdminChat.Off=Admin Chat only [[RED]]Off
 Commands.AdminChat.On=Admin Chat only [[GREEN]]On
 Commands.AdminChat.Prefix=[[AQUA]]{[[WHITE]]{0}[[AQUA]]}
 Commands.AdminToggle=[[RED]]- Toggle admin chat
+Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]This command is disabled.
 Commands.DoesNotExist= [[RED]]Player does not exist in the database!
 Commands.GodMode.Disabled=[[YELLOW]]mcMMO Godmode Disabled
@@ -442,6 +443,9 @@ Commands.Stats.Self=YOUR STATS
 Commands.Stats=[[RED]]- View your mcMMO stats
 Commands.ToggleAbility=[[RED]]- Toggle ability activation with right click
 Commands.Usage.1=[[RED]]Proper usage is /{0} {1}
+Commands.Usage.2=[[RED]]Proper usage is /{0} {1} {2}
+Commands.Usage.Message=message
+Commands.Usage.PartyName=party-name
 Commands.Usage.Player=player
 mcMMO.NoInvites=[[RED]]You have no invites at this time
 mcMMO.NoPermission=[[DARK_RED]]Insufficient permissions.
