Localize /mmoedit, /mmoupdate, and /mcpurge

--- a/src/main/resources/locale/locale_cy.properties
+++ b/src/main/resources/locale/locale_cy.properties
@@ -340,6 +340,7 @@ Commands.AdminChat.Off=Admin Sgwrs unig [[RED]] Oddi ar
 Commands.AdminChat.On=Admin Chat only [[GREEN]]On
 Commands.AdminChat.Prefix=[[AQUA]]{[[WHITE]]{0}[[AQUA]]}
 Commands.AdminToggle=[[RED]] - sgwrs gweinyddol Toggle
+Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]] Mae\'r gorchymyn yn anabl.
 Commands.DoesNotExist=[[RED]] nid Chwaraewr yn bodoli yn y gronfa ddata!
 Commands.GodMode.Disabled=[[YELLOW]]mcMMO Godmode Disabled
@@ -357,6 +358,8 @@ Commands.mcrank.Player=[[RED]]TARGET: [[WHITE]]{0}
 Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
 Commands.mcrank.Unranked=[[WHITE]]Unranked
 Commands.mmoedit=[chwaraewr] <skill> <newvalue>  [[RED]] - Targed addasu
+Commands.mmoupdate.Start=[[GRAY]]Starting conversion...
+Commands.mmoupdate.Finish=[[GREEN]]Conversion finished!
 Commands.ModDescription=[[RED]]- Read brief mod description
 Commands.NoConsole=This command does not support console usage.
 Commands.Other=[[GREEN]]--OTHER COMMANDS--
@@ -387,6 +390,9 @@ Commands.Stats.Self=YOUR STATS
 Commands.Stats=[[RED]]- View your mcMMO stats
 Commands.ToggleAbility=[[RED]]- Toggle ability activation with right click
 Commands.Usage.1=[[RED]]Proper usage is /{0} {1}
+Commands.Usage.2=[[RED]]Proper usage is /{0} {1} {2}
+Commands.Usage.Message=message
+Commands.Usage.PartyName=party-name
 Commands.Usage.Player=player
 mcMMO.NoInvites=[[RED]]You have no invites at this time
 mcMMO.NoPermission=[[DARK_RED]]Insufficient permissions.
