--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -383,6 +383,7 @@ Commands.AdminChat.Off=Admin Chat only [[RED]]deaktiviert
 Commands.AdminChat.On=Admin Chat only [[GREEN]]aktiviert
 Commands.AdminChat.Prefix=[[AQUA]]{[[WHITE]]{0}[[AQUA]]}
 Commands.AdminToggle=[[RED]]- Admin Chat umschalten
+Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]Dieser Command ist deaktiviert.
 Commands.DoesNotExist= [[RED]]Spieler in Datenbank nicht gefunden!
 Commands.GodMode.Disabled=[[YELLOW]]mcMMO Godmode deaktivivert
@@ -400,6 +401,8 @@ Commands.mcrank.Player=[[RED]]TARGET: [[WHITE]]{0}
 Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
 Commands.mcrank.Unranked=[[WHITE]]Unranked
 Commands.mmoedit=[Spieler] <skill> <newvalue> [[RED]] - Ziel modifizieren
+Commands.mmoupdate.Start=[[GRAY]]Starting conversion...
+Commands.mmoupdate.Finish=[[GREEN]]Conversion finished!
 Commands.ModDescription=[[RED]]- Mod-Informationen Lesen.
 Commands.NoConsole=Dieser Command wird nicht per Console unterst\u00FCtzt.
 Commands.Other=[[GREEN]]--ANDERE COMMANDS--
@@ -433,6 +436,9 @@ Commands.Stats.Self=DEINE WERTE
 Commands.Stats=[[RED]]- Zeigt deine mcMMO Werte
 Commands.ToggleAbility=[[RED]]- F\u00E4higkeiten-Aktivierung per Rechtsklick umschalten
 Commands.Usage.1=[[RED]]Proper usage is /{0} {1}
+Commands.Usage.2=[[RED]]Proper usage is /{0} {1} {2}
+Commands.Usage.Message=message
+Commands.Usage.PartyName=party-name
 Commands.Usage.Player=player
 mcMMO.NoInvites=[[RED]]Du hast derzeit keine Einladungen
 mcMMO.NoPermission=[[DARK_RED]]Unzureichende Rechte.
