Localize /addlevels and /addxp commands

--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -377,6 +377,12 @@ Combat.TouchedFuzzy=[[DARK_RED]]Ungl\u00FCcklich ber\u00FChrt. Schwindelgef\u00F
 #KOMMANDOS
 ##allgemein
 mcMMO.Description=[[DARK_AQUA]]\u00DCber das [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO ist ein [[RED]]Open Source[[GOLD]] RPG Mod [[GOLD]]von [[BLUE]]nossr50[[GOLD]] aus 2011,[[GOLD]]Ziel ist es eine qualitative RPG Erfahrung zu bieten.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GOLD]]Nutze [[RED]]/mcc[[GOLD]] f\u00FCr die Commands,[[GOLD]] - [[GOLD]]Nutze [[RED]]/SKILLNAME[[GOLD]] f\u00FCr detailierte Skillinfos,[[DARK_AQUA]]Entwickler:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Projekleiter),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Entwickler),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Entwickler),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Entwickler),[[DARK_AQUA]]N\u00FCtzliche Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Fehlerberichte,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Thema im Bukkit Forum,[[DARK_AQUA]]Deutsche \u00DCbersetzung:,[[GOLD]] - [[BLUE]] Jobsti
+Commands.addlevels.AwardAll.1=[[GREEN]]You were awarded {0} levels in all skills!
+Commands.addlevels.AwardAll.2=[[RED]]All skills have been modified for {0}.
+Commands.addlevels.AwardSkill.1=[[GREEN]]You were awarded {0} levels in {1}!
+Commands.addlevels.AwardSkill.2=[[RED]]{0} has been modified for {1}.
+Commands.addxp.AwardAll=[[GREEN]]You were awarded {0} experience in all skills!
+Commands.addxp.AwardSkill=[[GREEN]]You were awarded {0} experience in {1}!
 Commands.Ability.Off=F\u00E4higkeiten [[RED]]deaktiviert
 Commands.Ability.On=F\u00E4higkeiten [[GREEN]]aktivivert
 Commands.AdminChat.Off=Admin Chat only [[RED]]deaktiviert
