--- a/src/main/resources/locale/locale_cy.properties
+++ b/src/main/resources/locale/locale_cy.properties
@@ -334,6 +334,12 @@ Combat.StruckByGore=[[RED]]**YOU HAVE BEEN GORED**
 Combat.TargetDazed=Target was [[DARK_RED]]Dazed
 Combat.TouchedFuzzy=[[DARK_RED]] cyffwrdd Fuzzy. Teimlo benysgafn.
 mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Bukkit Forum Thread
+Commands.addlevels.AwardAll.1=[[GREEN]]You were awarded {0} levels in all skills!
+Commands.addlevels.AwardAll.2=[[RED]]All skills have been modified for {0}.
+Commands.addlevels.AwardSkill.1=[[GREEN]]You were awarded {0} levels in {1}!
+Commands.addlevels.AwardSkill.2=[[RED]]{0} has been modified for {1}.
+Commands.addxp.AwardAll=[[GREEN]]You were awarded {0} experience in all skills!
+Commands.addxp.AwardSkill=[[GREEN]]You were awarded {0} experience in {1}!
 Commands.Ability.Off=Ability use toggled [[RED]]off
 Commands.Ability.On=Ability use toggled [[GREEN]]on
 Commands.AdminChat.Off=Admin Sgwrs unig [[RED]] Oddi ar
