Looks like we've got to escape those. Fixes #526

--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -387,7 +387,7 @@ Commands.Ability.Off=F\u00E4higkeiten [[RED]]deaktiviert
 Commands.Ability.On=F\u00E4higkeiten [[GREEN]]aktivivert
 Commands.AdminChat.Off=Admin Chat only [[RED]]deaktiviert
 Commands.AdminChat.On=Admin Chat only [[GREEN]]aktiviert
-Commands.AdminChat.Prefix=[[AQUA]]{[[WHITE]]{0}[[AQUA]]}
+Commands.AdminChat.Prefix=[[AQUA]]\{[[WHITE]]{0}[[AQUA]]\}
 Commands.AdminToggle=[[RED]]- Admin Chat umschalten
 Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]Dieser Command ist deaktiviert.
